--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.19",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
     "dotenv": "^16.4.5",
